Adjusted hero space, fixed z-index of dropdown and images

--- a/css/styles-hailey.css
+++ b/css/styles-hailey.css
@@ -46,7 +46,7 @@
   min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   color: rgb(25,114,120);
-  z-index: 1;
+  z-index: 5;
 }
 
 .dropdown-content a {
@@ -68,7 +68,12 @@
 }
 
 
-
+.imgA1 {
+  z-index: 1;
+  position: absolute;
+  top: 25px;
+  left: -100px;
+}
 
 header {
   background-color: #393E40;
@@ -288,7 +293,7 @@ h1 {
     top: 50px;
     padding: 15px;
     max-width: 450px;
-    z-index: 200;
+    z-index: 2;
     align-items: center;
   }
 
@@ -329,6 +334,7 @@ h1 {
     border-radius: 32pt;
     justify-content: space-around;
     text-align: center;
+    z-index: 3;
   }
 
   #testimonial {
@@ -502,7 +508,7 @@ li {
     .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
         border: 0;
         font-weight: normal;
-        color: #454545;
+        color: #ffffff;
     }
 
     li {
